--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
-    <string name="serverAddress">http://192.168.1.109:9000</string>
+    <string name="serverAddress">http://forestsupply.tinyappsdev.com</string>
 
     <string name="search">Search</string>
     <string name="list_all">List All</string>
